--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="__objetivo_de_aprendizaje.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="objetivo_de_aprendizaje.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
 <script type="text/javascript" src="_style_js.js"></script></body></html>
+
